[package]
name = "iso-3166-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
handlebars = "4.2.2"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
